--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "better-sqlite3": "^8.5.2",
     "bootstrap": "^5.3.1",
+    "cors": "^2.8.5",
+    "expo-sqlite": "^11.3.2",
+    "node": "^20.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "sqlite3": "^5.1.6",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "backend-start": "NODE_ENV=production node node_api/database.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
